Uploaded image for project: 'Lustre'
  1. Lustre
  2. LU-2097

sanity.sh test_17m, lfsck: e2fsck failed due to MDT quota accounting error

XMLWordPrintable

    • Icon: Bug Bug
    • Resolution: Fixed
    • Icon: Blocker Blocker
    • Lustre 2.4.0
    • Lustre 2.4.0
    • None
    • 3
    • 4381

      Running acc-sm on a local ldiskfs test system causes e2fsck to fail when checking the MDT in sanity.sh test_17m. I'm running e2fsprogs-1.42.5.wc3-7.fc13.x86_64, which I don't think is the issue, but it hasn't been released yet.

      It isn't clear when the quota accounting issue is first introduced (even if it is present when the filesystem is formatted), but the problem needs to be resolved for 2.4.0 and/or the e2fsprogs-1.42.5.wc3 release.

      == sanity test 17m: run e2fsck against MDT which contains short/long symlink 21:55:58 (1349409358)
      create 512 short and long symlink files under /mnt/testfs/d0.sanity/d17m
      erase them
      recreate the 512 symlink files with a shorter string
      stop and checking mds1: e2fsck -fnvd /dev/vg_sookie/lvmdt1
      Stopping /mnt/mds1 (opts:-f) on sookie-gig.adilger.int
      e2fsck 1.42.5.wc3 (15-Sep-2012)
      [QUOTA WARNING] Usage inconsistent for ID 0:actual (3649536, 1281) != expected (3551232, 1281)
      [QUOTA WARNING] Usage inconsistent for ID 0:actual (3645440, 1280) != expected (3547136, 1280)
      Pass 1: Checking inodes, blocks, and sizes
      Pass 2: Checking directory structure
      Pass 3: Checking directory connectivity
      Pass 4: Checking reference counts
      Pass 5: Checking group summary information
      Update quota info for quota type 0? no
      
      Update quota info for quota type 1? no
      
      testfs-MDT0000: ********** WARNING: Filesystem still has errors **********
      
              1293 inodes used (1.29%, out of 100000)
                 8 non-contiguous files (0.6%)
                 1 non-contiguous directory (0.1%)
                   # of inodes with ind/dind/tind blocks: 3/0/0
             17587 blocks used (35.17%, out of 50000)
                 0 bad blocks
                 1 large file
      
               109 regular files
               135 directories
                 0 character device files
                 0 block device files
                 0 fifos
                 8 links
              1040 symbolic links (521 fast symbolic links)
                 0 sockets
      ------------
              1292 files
      Starting mds1:   /dev/vg_sookie/lvmdt1 /mnt/mds1
      Started testfs-MDT0000
       sanity test_17m: @@@@@@ FAIL: e2fsck should not report error upon  short/long symlink MDT: rc=4 
      

            niu Niu Yawei (Inactive)
            adilger Andreas Dilger
            Votes:
            0 Vote for this issue
            Watchers:
            4 Start watching this issue

              Created:
              Updated:
              Resolved: